--- a/public/terms.html
+++ b/public/terms.html
@@ -18,69 +18,31 @@
 </head>
 
 <body id="app">
+
+    <!-- Geo block -->
     <section v-if="geo" class="geo-block">
-        <img src="assets/img/Color logo with background.png" alt="Jurdi Logo" class="img-fluid rounded" width="100">
-        <h1 class="text-center text-grey-2 my-5">Geo blocked </h1>
+        <center class="my-5">
+            <img @click="unGeoBlock" src="assets/img/Color_logo_with_background-removebg-preview.png" alt="Jurdi Logo"
+                class="img-fluid rounded" width="120">
+            <h1 class="text-center text-grey-2 my-5">Welcome to JURDI Law </h1>
+            <p class="text-center text-grey-2 my-5">Unfortunately JURDI Law Does Not Provide Services In Your
+                Jurisdiction</p>
+        </center>
     </section>
+    <!-- Spinner -->
     <section v-if="spinner" class="geo-block">
         <center class="my-5 d-flex flex-column justify-content-center align-items-center">
 
-            <img src="assets/img/Color logo with background.png" alt="Jurdi Logo" class="img-fluid rounded my-3"
-                width="100">
+            <img src="assets/img/Color_logo_with_background-removebg-preview.png" alt="Jurdi Logo"
+                class="img-fluid rounded my-4" width="120">
             <!-- <h1 class="fs-1 text-center cin text-grey-2 my-3">Jurdi Law</h1> -->
-            <div class="spinner-grow text-light" role="status"></div>
+            <div class="spinner-grow text-light mt-5" role="status"></div>
         </center>
     </section>
-    <header
-        class="w-100 position-fixed top-0 start-0  d-flex justify-content-between align-items-center px-5 py-3 shadow text-light">
-        <a href="./index.html">
-            <img src="assets/img/Color logo with background.png" alt="Jurdi Logo" class="img-fluid rounded" width="100">
-        </a>
-        <!-- <h1 class="fs-1 cin  point"><a href="./index.html" class="text-light">Jurdi Law</a></h1> -->
-        <nav class="justify-content-evenly align-items-center gap-5">
-            <a href="./index.html" class="fs-6">Home</a>
-            <a href="./team.html" class="fs-6">Our Team</a>
-            <a href="" class="fs-6">Terms of Use</a>
-            <a href="" class="fs-6">Privacy Policy</a>
-            <a href="" class="fs-6">LinkedIn</a>
-            <a href="" class="btn btn-primary px-3 ls-2 fs-6">Contact</a>
-        </nav>
-        <i class="bi bi-grid-fill fs-1 menu point" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"></i>
 
+    <!-- Header -->
+    <my-nav :profile="profile"></my-nav>
 
-
-        <div class="w-85 offcanvas offcanvas-end text-dark" tabindex="-1" id="offcanvasExample"
-            aria-labelledby="offcanvasExampleLabel">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title fs-5 text-grey-1 cin" id="offcanvasExampleLabel">Jurdi Law</h5>
-                <i class="bi bi-arrow-right fs-3" data-bs-dismiss="offcanvas" aria-label="Close"></i>
-            </div>
-            <div class="offcanvas-body">
-                <div class="text-center text-secondary">
-                    {{profile.bio}}
-                </div>
-                <div class="d-flex justify-content-evenly align-items-center gap-3 my-4 media-links">
-                    <i class="bi bi-whatsapp"></i>
-                    <i class="bi bi-linkedin"></i>
-                    <i class="bi bi-envelope"></i>
-                    <i class="bi bi-twitter"></i>
-                </div>
-                <hr>
-                <section class="d-flex flex-column justify-content-evenly align-items-center gap-3 my-4 ls-2">
-                    <a href="">Technology</a>
-                    <a href="">Media</a>
-                    <a href="">Music</a>
-                    <a href="">Influencers & Talents</a>
-                    <a href="./team.html">Our Team</a>
-
-                    <a href="">Privacy Policy</a>
-                    <a href="">Terms of Use</a>
-                    <a href="" class="btn btn-primary text-light w-75">Contact Us</a>
-                </section>
-
-            </div>
-        </div>
-    </header>
     <main>
 
         <h2 class="text-center text-grey-2 mt-5 fs-2 scale-up-center">Jurdi Law | Terms of Use</h2>
@@ -214,10 +176,13 @@
 
     </main>
     <hr>
-    <footer>
-        <h6 class="fs-6 text-grey-1 text-center my-3">Powered by <a href="https://lebancode.com"
-                class="text-grey-2"><strong>Lebancode.com</strong></a></h6>
-    </footer>
+
+    <!-- CONTACT SECTION -->
+    <contact :profile="profile"></contact>
+
+    
+    <!-- FOOTER -->
+    <my-footer :profile="profile"></my-footer>
 
     <!-- JAVASCRIPT -->
     <script src="assets/js/vue.js"></script>
